--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -6,11 +6,11 @@
     <img alt="mountains" src="{{ "/assets/img/mountains.jpg" | prepend: site.baseurl }}" />
   </div>
   <div class="contents">
-    <h3> Project Title </h3>
+    <h3> Aerospace Clean Room Recertification </h3>
     <ul>
       <li> Featured Skills</li>
     </ul>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+    <p> A clean room's goal is to reduce particulate contamination by controlling environmental parameters such as humidity, temperature and pressure. If excess debris ends up in a clean room where critical flight hardware is present, satellite equipment can be damaged leading to extended timelines and loss of money. In order to confirm Michigan Tech's Aerospace Enterprise's clean room met Class ISO 8 standards, I designed a continually monitoring sensor system. This involved tasks such as creating circuit boards and system integration maps. </p>
     <a class="project-link" href="#">Check it out</a>
   </div>
 </div>
@@ -19,11 +19,11 @@
     <img alt="mountains" src="{{ "/assets/img/skate.jpg" | prepend: site.baseurl }}" />
   </div>
   <div class="contents-right">
-    <h3> Project Title </h3>
+    <h3> Orbital Mechanics Mission to Local Asteroid </h3>
     <ul>
       <li> Featured Skills</li>
     </ul>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+    <p> In order to conduct research on early solar system life, my project group was tasked to calculate a rendezvous mission to a local asteroid within a 2-year timeline. We were told to incoporate a lunar fly-by and to also end our mission in lunar orbit after the rendezvous. </p>
     <a class="project-link" href="#">Check it out</a>
   </div>
 </div>
