--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -3,7 +3,7 @@
 </div>
 <div class="user-projects">
   <div class="images-right">
-    <img alt="mountains" src="{{ "/assets/img/mountains.jpg" | prepend: site.baseurl }}" />
+    <img alt="clean_room" src="{{ "/assets/img/clean_room.jpg" | prepend: site.baseurl }}" />
   </div>
   <div class="contents">
     <h3> Aerospace Clean Room Recertification </h3>
@@ -16,7 +16,7 @@
 </div>
 <div class="user-projects">
   <div class="images-left">
-    <img alt="mountains" src="{{ "/assets/img/skate.jpg" | prepend: site.baseurl }}" />
+    <img alt="asteroid" src="{{ "/assets/img/asteroid.jpg" | prepend: site.baseurl }}" />
   </div>
   <div class="contents-right">
     <h3> Orbital Mechanics Mission to Local Asteroid </h3>
