--- a/_sass/_header.scss
+++ b/_sass/_header.scss
@@ -1,4 +1,4 @@
-#particles-js-small {
+#particles-js {
   background: $main;
   display: flex;
   vertical-align: bottom;
@@ -18,7 +18,7 @@
   display: flex;
   vertical-align: bottom;
   width: 100%;
-  min-height: 100vh;
+  min-height: 20vh;
   background-repeat: no-repeat;
   background-size: cover;
   background-attachment: fixed;
@@ -39,15 +39,18 @@
   -webkit-transform: translate(-50%, -50%);
   transform: translate(-50%, -50%);
   .site-title {
-    font-size: 50px;
+    font-size: 100px;
     display: block;
     line-height: 1;
-    color: #000;
+    color: #FFF;
     @media only screen and (min-width:$cut){
       margin: 0;
       font-size: 100px;
     }
   }
+
+
+
   .site-description {
     font-size: 20px;
     display: block;
@@ -59,6 +62,42 @@
     }
   }
 }
+
+.header-small {
+  z-index: 1;
+  text-align: center;
+  color:#FFF;
+  position: absolute;
+  top: 15%;
+  left: 50%;
+  margin: 0 auto;
+  -webkit-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
+  .site-title-small {
+    font-size: 25px;
+    display: block;
+    line-height: 1;
+    color: #FFF;
+    @media only screen and (min-width:$cut){
+      margin: 0;
+      font-size: 75px;
+    }
+  }
+
+
+
+  .site-description-small {
+    font-size: 20px;
+    display: block;
+    line-height: 1;
+    color: #FFF;
+    margin-top: 10px;
+    @media only screen and (min-width:$cut){
+      font-size: 40px;
+    }
+  }
+}
+
 
 .header-links {
   margin: 10px;
