attempting to add animation
Co-Authored-By: Eric Bartos <djbartos93@gmail.com>

--- a/_sass/particle.scss
+++ b/_sass/particle.scss
@@ -9,7 +9,9 @@
   "about",
   "projects",
   "footer",
+  "fades",
   "lib/devicon",
   "lib/fontawesome",
-  "lib/normalize"
+  "lib/normalize",
+  "/bower_components/animate.css/animate.css"
 ;
