--- a/_sass/_about.scss
+++ b/_sass/_about.scss
@@ -31,3 +31,11 @@
   text-align: center;
   margin: 5px auto;
 }
+
+.icons {
+  hight:75px;
+  width:75px;
+  max-width:100%;
+  max-height: 100%;
+
+}
