Revert "attempting to add animation"
This reverts commit bac3c73b08d313ff410a2aea78310c0bdf0325a4.

--- a/_includes/about.html
+++ b/_includes/about.html
@@ -5,9 +5,9 @@
   <div class="user">
     <div class="tech">
       <h2>Design</h2>
-      <img class="icons" alt="clean_room" src="{{ "/assets/img/autocad_logo.jpg" | prepend: site.baseurl }}" />
-      <img class="icons" alt="eagle" src="{{ "/assets/img/eagle_logo.png" | prepend: site.baseurl }}" />
-      <img class="icons" alt="matlab" src="{{ "/assets/img/matlab_logo.png" | prepend: site.baseurl }}" />
+      <i class="devicon-html5-plain-wordmark"></i>
+      <i class="devicon-bootstrap-plain-wordmark colored"></i>
+      <i class="devicon-sass-original colored"></i>
       <p>Mumblecore hexagon kombucha, pitchfork four loko raclette intelligentsia master cleanse.
         Vinyl XOXO lumbersexual</p>
     </div>
