--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,7 +1,7 @@
 <div id="particles-js" class="big-shit">
   <div class="header">
       <h1>
-        <span class="site-title rotateIn">{{site.username}}</span>
+        <span class="site-title">{{site.username}}</span>
         <span class="site-description">{{site.user_title}}</span>
       </h1>
       <div class="header-icons">
