--- a/_sass/particle.scss
+++ b/_sass/particle.scss
@@ -9,9 +9,7 @@
   "about",
   "projects",
   "footer",
-  "fades",
   "lib/devicon",
   "lib/fontawesome",
-  "lib/normalize",
-  "/bower_components/animate.css/animate.css"
+  "lib/normalize"
 ;
