added some animations :boom:

--- a/_sass/particle.scss
+++ b/_sass/particle.scss
@@ -12,6 +12,5 @@
   "fades",
   "lib/devicon",
   "lib/fontawesome",
-  "lib/normalize",
-  "/bower_components/animate.css/animate.css"
-;
+  "lib/normalize"
+  ;
