--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,10 +1,10 @@
 <div id="particles-js" class="big-shit">
   <div class="header">
       <h1>
-        <span class="site-title rotateIn">{{site.username}}</span>
+        <span class="site-title">{{site.username}}</span>
         <span class="site-description">{{site.user_title}}</span>
       </h1>
-      <div class="header-icons">
+      <div class="header-icons animated fadeIn">
         <a aria-label="Send email" target="_blank" href="mailto:amalexsy@mtu.edu?subject=Website Inquiry"><i class="icon fa fa-envelope"></i></a>
         <a aria-label="My LinkedIn" target="_blank" href="https://www.linkedin.com/in/alisonalexsy/"><i class="icon fa fa-linkedin-square" aria-hidden="true"></i></a>
         <a aria-label="My Github" target="_blank" href="https://github.com/amalexsy"><i class="icon fa fa-github-alt" aria-hidden="true"></i></a>
@@ -14,5 +14,5 @@
         <a class="link" href="#projects" data-scroll>Projects</a>
       </div>
   </div>
-  <a class="down" href="#about" data-scroll><i class="icon fa fa-chevron-down" aria-hidden="true"></i></a>
+  <a class="downArrow" href="#about" data-scroll><i class="icon fa fa-chevron-down" aria-hidden="true"></i></a>
 </div>
