--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -11,7 +11,7 @@
       <li> Circuit board fabrication, </li>
     </ul>
     <p> A clean room's goal is to reduce particulate contamination by controlling environmental parameters such as humidity, temperature and pressure. If excess debris ends up in a clean room where critical flight hardware is present, satellite equipment can be damaged leading to extended timelines and loss of money. In order to confirm Michigan Tech's Aerospace Enterprise's clean room met Class ISO 8 standards, I designed a continually monitoring sensor system. This involved tasks such as creating circuit boards and system integration maps. </p>
-    <a class="project-link" href="#">Check it out</a>
+    <a class="project-link" href="/cleanroom">Check it out</a>
   </div>
 </div>
 <div class="user-projects">
