--- a/_sass/_header.scss
+++ b/_sass/_header.scss
@@ -142,14 +142,14 @@
   }
 }
 
-.down {
+.downArrow {
   color: #FFF;
   position: absolute;
-  bottom: 25px;
+  bottom: 60px;
   width: 100%;
   margin: 0 auto;
   display: block;
-  text-align: center;
+  //text-align: center;
   font-size: 30px;
   cursor: pointer;
   .icon {
