--- a/_includes/head.html
+++ b/_includes/head.html
@@ -8,7 +8,7 @@
 
   <link rel="stylesheet" href="{{ "/assets/css/style.css" | prepend: site.baseurl }}">
   <link rel="stylesheet" href="{{ "/bower_components/animate.css/animate.css" | prepend: site.baseurl }}">
-  <link rel="stylesheet" href="{{ "/bower_components/devicons/devicons.css" | prepend: site.baseurl }}">
+  <link rel="stylesheet" href="{{ "/bower_components/devicons/css/devicons.scss" | prepend: site.baseurl }}">
   <link rel="stylesheet" href="{{ "/bower_components/font-awesome/web-fonts-with-css/css/fontawesome-all.css" | prepend: site.baseurl }}">
-  <link rel="stylesheet" href="{{ "/bower_components/normalize.css/normailze.css" | prepend: site.baseurl }}">
+  <link rel="stylesheet" href="{{ "/bower_components/normalize.css/normalize.css" | prepend: site.baseurl }}">
 </head>
