--- a/_sass/_colapse.scss
+++ b/_sass/_colapse.scss
@@ -53,7 +53,7 @@ input[type='checkbox'] {
 }
 
 .toggle:checked + .lbl-toggle + .collapsible-content {
-  max-height: 350px;
+  max-height: 100%;
 }
 
 .toggle:checked + .lbl-toggle {
