--- a/_includes/about.html
+++ b/_includes/about.html
@@ -5,26 +5,26 @@
   <div class="user">
     <div class="tech">
       <h2>Design</h2>
-      <img class="icons" alt="clean_room" src="{{ "/assets/img/autocad_logo.jpg" | prepend: site.baseurl }}" />
-      <img class="icons" alt="eagle" src="{{ "/assets/img/eagle_logo.png" | prepend: site.baseurl }}" />
-      <img class="icons" alt="matlab" src="{{ "/assets/img/matlab_logo.png" | prepend: site.baseurl }}" />
+      <img class="icons" alt="solidworks" src="{{ "/assets/img/solidworks.png" | prepend: site.baseurl }}" />
+      <img class="icons" alt="nx" src="{{ "/assets/img/nx.png" | prepend: site.baseurl }}" />
+      <img class="icons" alt="autocad" src="{{ "/assets/img/autocad.jpg" | prepend: site.baseurl }}" />
       <p>I specialize in several computer aided design softwares including Solidworks and Siemens NX. Furthermore,
         I have taken extensive coursework in geometric dimension and tolerancing
         (GD'&'T) and advanced CAD/CAM methods.</p>
     </div>
     <div class="tech">
-      <h2>Code</h2>
-      <i class="fab fa-linux"></i>
-      <i class="devicon-html5-plain-wordmark colored"></i>
-      <i class="devicon-ruby-plain colored"></i>
-      <p>I am attempting to code</p>
+      <h2>Tools</h2>
+      <img class="icons" alt="eagle_logo" src="{{ "/assets/img/eagle_logo.png" | prepend: site.baseurl }}" />
+      <img class="icons" alt="lms" src="{{ "/assets/img/lms.png" | prepend: site.baseurl }}" />
+      <img class="icons" alt="altair" src="{{ "/assets/img/altair.png" | prepend: site.baseurl }}" />
+      <p>Mumblecore hexagon kombucha, pitchfork four loko raclette intelligentsia master cleanse.
+        Vinyl XOXO lumbersexual</p>  
     </div>
     <div class="tech">
-      <h2>Tools</h2>
-      <i class="devicon-git-plain"></i>
-      <i class="devicon-gulp-plain colored"></i>
-      <i class="devicon-atom-original-wordmark"></i>
-      <p>Mumblecore hexagon kombucha, pitchfork four loko raclette intelligentsia master cleanse.
-        Vinyl XOXO lumbersexual</p>
+      <h2>Code</h2>
+      <i class="fab fa-linux"></i>
+      <img class="icons" alt="matlab" src="{{ "/assets/img/matlab.png" | prepend: site.baseurl }}" />
+      <i class="devicon-ruby-plain colored"></i>
+      <p>I am attempting to code</p>
     </div>
 </div>
