style and project links

--- a/_includes/header-small.html
+++ b/_includes/header-small.html
@@ -2,11 +2,11 @@
   <div class="header-small">
       <h1>
         <span class="site-title-small">{{site.username}}</span>
-        <span class="site-description">{{site.user_title}}</span>
+        <span class="site-description-small">{{site.user_title}}</span>
       </h1>
       <div class="header-links">
         <a class="link" href="/">Home</a>
-        <a class="link" href="#about" data-scroll>About Me</a>
+        <a class="link" href="home/#about" data-scroll>About Me</a>
         <a class="link" href="#projects" data-scroll>Projects</a>
       </div>
   </div>
