--- a/_sass/_header.scss
+++ b/_sass/_header.scss
@@ -63,6 +63,9 @@
 }
 
 .header-small {
+  h1 {
+    color: #FFF;
+  }
   z-index: 1;
   text-align: center;
   color:#FFF;
@@ -73,7 +76,7 @@
   -webkit-transform: translate(-50%, -50%);
   transform: translate(-50%, -50%);
   .site-title-small {
-    font-size: 30px;
+    font-size: 35px;
     display: block;
     line-height: 1;
     color: #FFF;
@@ -92,7 +95,7 @@
     color: #FFF;
     margin-top: 10px;
     @media only screen and (min-width:$cut){
-      font-size: 40px;
+      font-size: 20px;
     }
   }
 }
