--- a/_includes/header-small.html
+++ b/_includes/header-small.html
@@ -6,8 +6,8 @@
       </h1>
       <div class="header-links">
         <a class="link" href="/">Home</a>
-        <a class="link" href="home/#about" data-scroll>About Me</a>
-        <a class="link" href="#projects" data-scroll>Projects</a>
+        <a class="link" href="/#about">About Me</a>
+        <a class="link" href="#projects">Projects</a>
       </div>
   </div>
 </div>
