--- a/_includes/about.html
+++ b/_includes/about.html
@@ -17,14 +17,13 @@
       <img class="icons" alt="eagle_logo" src="{{ "/assets/img/eagle_logo.png" | prepend: site.baseurl }}" />
       <img class="icons" alt="lms" src="{{ "/assets/img/lms.png" | prepend: site.baseurl }}" />
       <img class="icons" alt="altair" src="{{ "/assets/img/altair.png" | prepend: site.baseurl }}" />
-      <p>Mumblecore hexagon kombucha, pitchfork four loko raclette intelligentsia master cleanse.
-        Vinyl XOXO lumbersexual</p>  
+      <p>I am experienced in Eagle PCB Design, in addition to numerous other mechanical design integration softwares including LMS Test.Lab and AMESim. I have performed several Finite Element Analyses (FEA) through Altair Hyperworks  </p>
     </div>
     <div class="tech">
       <h2>Code</h2>
       <i class="fab fa-linux"></i>
       <img class="icons" alt="matlab" src="{{ "/assets/img/matlab.png" | prepend: site.baseurl }}" />
       <i class="devicon-ruby-plain colored"></i>
-      <p>I am attempting to code</p>
+      <p>For part of my senior design, I integrated several circuits to an open source IoT platform. This experience made my want to widen my coding horizons to platforms such as Ruby and Linux. This website showcases my early coding journey.</p>
     </div>
 </div>
