--- a/_layouts/resume.html
+++ b/_layouts/resume.html
@@ -4,7 +4,7 @@
   <body class="animated fadeIn">
       {% include header-small.html %}
       <div>
-        <img class="sizing-resume" alt="Resume" src="{{ "/assets/img/resume.jpg" | prepend: site.baseurl }}" />
+      <iframe class="sizing-resume" src="https://drive.google.com/file/d/1Owp1MyQ3FzQGgmhsIqNW8N-07-OlOrQc/preview" width="640" height="1100"></iframe>
       </div>
       {% include footer.html %}
   </body>
