--- a/_sass/_colapse.scss
+++ b/_sass/_colapse.scss
@@ -87,6 +87,7 @@ input[type='checkbox'] {
   justify-content: space-between;
   width: 90%;
   max-width: 960px;
+  max-height: 100%;
   margin: auto;
   @media only screen and (min-width: $cut) {
     width: 80%;
