--- a/_includes/header-small.html
+++ b/_includes/header-small.html
@@ -7,7 +7,7 @@
       <div class="header-links">
         <a class="link" href="/">Home</a>
         <a class="link" href="/#about">About Me</a>
-        <a class="link" href="#projects">Projects</a>
+        <a class="link" href="/#projects">Projects</a>
       </div>
   </div>
 </div>
