--- a/_includes/header.html
+++ b/_includes/header.html
@@ -7,7 +7,7 @@
       <div class="header-icons animated fadeIn">
         <a aria-label="Send email" target="_blank" href="mailto:amalexsy@mtu.edu?subject=Website Inquiry"><i class="icon fas fa-envelope"></i></a>
         <a aria-label="My LinkedIn" target="_blank" href="https://www.linkedin.com/in/alisonalexsy/"><i class="icon fab fa-linkedin" aria-hidden="true"></i></a>
-        <a aria-label="My Github" target="_blank" href="https://github.com/amalexsy"><i class="icon fab fa-github-alt" aria-hidden="true"></i></a>
+        <a aria-label="My Github" target="_blank" href="https://github.com/amalexsy"><i class="icon fab fa-github-alt" data-hover="CLICK ME" data-active="I'M ACTIVE" aria-hidden="true"></i></a> 
       </div>
       <div class="header-links">
         <a class="link" href="#about" data-scroll>About Me</a>
