--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -3,7 +3,10 @@
 </div>
 <div class="user-projects">
   <div class="images-right">
+    <figure>
     <img alt="clean_room" src="{{ "/assets/img/clean_room.jpg" | prepend: site.baseurl }}" />
+<figcaption class="imgcaptions"> Source: NASA/JPL-Caltech </figcaption>
+</figure>
   </div>
   <div class="contents">
     <h3> Aerospace Clean Room Recertification </h3>
@@ -16,7 +19,10 @@
 </div>
 <div class="user-projects">
   <div class="images-left">
+    <figure>
     <img alt="asteroid" src="{{ "/assets/img/asteroid.jpg" | prepend: site.baseurl }}" />
+    <figcaption class="imgcaptions"> Source: Getty Images/Brand X </figcaption>
+  </figure>
   </div>
   <div class="contents-right">
     <h3> Asteroid Retrieval Mission </h3>
