--- a/_sass/_projects.scss
+++ b/_sass/_projects.scss
@@ -100,3 +100,9 @@
                 border-color 0.3s ease-in;
   }
 }
+
+.imgcaptions {
+  font-size: 12px;
+  color: #FFA07A;
+  text-align:left;
+}
