--- a/_includes/about.html
+++ b/_includes/about.html
@@ -10,14 +10,14 @@
       <img class="icons" alt="autocad" src="{{ "/assets/img/autocad.jpg" | prepend: site.baseurl }}" />
       <p>I specialize in several computer aided design softwares including Solidworks and Siemens NX. Furthermore,
         I have taken extensive coursework in geometric dimension and tolerancing
-        (GD'&'T) and advanced CAD/CAM methods.</p>
+        (GD&T) and advanced CAD/CAM methods.</p>
     </div>
     <div class="tech">
       <h2>Tools</h2>
       <img class="icons" alt="eagle_logo" src="{{ "/assets/img/eagle_logo.png" | prepend: site.baseurl }}" />
       <img class="icons" alt="lms" src="{{ "/assets/img/lms.png" | prepend: site.baseurl }}" />
       <img class="icons" alt="altair" src="{{ "/assets/img/altair.png" | prepend: site.baseurl }}" />
-      <p>I am experienced in Eagle PCB Design, in addition to numerous other mechanical design integration softwares including LMS Test.Lab and AMESim. I have performed several Finite Element Analyses (FEA) through Altair Hyperworks  </p>
+      <p>I am highly experienced in Eagle PCB Design, in addition to numerous other mechanical design integration softwares including LMS Test.Lab and AMESim. Using Altair Hyperworks, I have performed numerous Finite Element Analyses (FEA).  </p>
     </div>
     <div class="tech">
       <h2>Code</h2>
