--- a/_sass/_colapse.scss
+++ b/_sass/_colapse.scss
@@ -93,3 +93,13 @@ input[type='checkbox'] {
     width: 80%;
   }
 }
+
+.imagecenter {
+  text-align: center;
+  display: block;
+  margin: 0 auto;
+}
+
+.padded {
+  padding-left: 20px;
+}
