update resume again

--- a/_layouts/resume.html
+++ b/_layouts/resume.html
@@ -4,7 +4,7 @@
   <body class="animated fadeIn">
       {% include header-small.html %}
       <div>
-      <iframe class="sizing-resume" src="https://drive.google.com/file/d/1JplaWfHWbYrc_R4px6Pfrf60QvZ4f9rO/view?usp=sharing" width="640" height="1100"></iframe>
+      <iframe class="sizing-resume" src="https://drive.google.com/file/d/1JplaWfHWbYrc_R4px6Pfrf60QvZ4f9rO/view" width="640" height="1100"></iframe>
       </div>
       {% include footer.html %}
   </body>
