--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -8,7 +8,18 @@
 <figcaption class="imgcaptions"> Source: NASA/JPL-Caltech </figcaption>
 </figure>
   </div>
-  <div class="contents">
+  
+  <style>
+    .bordered {
+      width: 500px;
+      height: 500px;
+      padding: 20px;
+      border: 10px solid yellowgreen;
+    }
+    </style>
+
+    }
+  <div class="contents", class="bordered">
     <h3> Aerospace Clean Room Recertification </h3>
     <ul>
       <li> <i> Circuit board fabrication, IoT platform integration, Visio integration maps</i> </li>
