--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -8,18 +8,17 @@
 <figcaption class="imgcaptions"> Source: NASA/JPL-Caltech </figcaption>
 </figure>
   </div>
-  
+
   <style>
-    .bordered {
-      width: 500px;
-      height: 500px;
-      padding: 20px;
-      border: 10px solid yellowgreen;
-    }
-    </style>
+  .borderexample
+  {
+  border-style:solid;
+  border-color:#287EC7;
+  }
+  </style>
 
     }
-  <div class="contents", class="bordered">
+  <div class="contents", class="borderexample">
     <h3> Aerospace Clean Room Recertification </h3>
     <ul>
       <li> <i> Circuit board fabrication, IoT platform integration, Visio integration maps</i> </li>
