--- a/_includes/about.html
+++ b/_includes/about.html
@@ -2,7 +2,7 @@
   <h1> My Expertise </h1>
   <p> {{site.user_description}} </p>
 </div>
-  <div class="user">
+  <div class="user" id="border">
     <div class="tech">
       <h2>Design</h2>
       <img class="icons" alt="solidworks" src="{{ "/assets/img/solidworks.png" | prepend: site.baseurl }}" />
