--- a/_sass/_about.scss
+++ b/_sass/_about.scss
@@ -32,6 +32,7 @@
 .user-details {
   text-align: center;
   margin: 5px auto;
+  padding-bottom: 2em;
 }
 
 .icons {
@@ -40,4 +41,10 @@
   max-width:100%;
   max-height: 100%;
 
+}
+
+#border {
+  border-style: solid;
+  border-radius: 17px;
+  border-color: #1a212c;
 }
