--- a/_layouts/resume.html
+++ b/_layouts/resume.html
@@ -4,7 +4,7 @@
   <body class="animated fadeIn">
       {% include header-small.html %}
       <div>
-      <iframe class="sizing-resume" src="https://app.luminpdf.com/viewer/5fb60c066d985e0011125e58" width="640" height="1100"></iframe>
+      <iframe class="sizing-resume" src="https://drive.google.com/file/d/1JnkNNnikSqx1zGEyi6FbT3wA-0C2JuBm/view?usp=sharing" width="640" height="1100"></iframe>
       </div>
       {% include footer.html %}
   </body>
